--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
